--- a/style.css
+++ b/style.css
@@ -19,12 +19,9 @@ body{
 }
 
 .header_page{
-    position: absolute;
     width: 1400px;
     min-height: 900px;
     background: linear-gradient(180deg, #EDA418 47.4%, rgba(237, 164, 24, 0) 100%);
-    left: 0px;
-    top: 0px;
 }
 
 .nav{
@@ -39,11 +36,6 @@ body{
 .logo{
     display: block;
     margin-top: 8px;
-    position: absolute;
-    width: 354.42px;
-    height: 72.51px;
-    left: 130px;
-    top: 105px;
 }
 
 .nav_list{
@@ -52,22 +44,71 @@ body{
     gap: 30px;
     margin: auto o;
     padding: 0;
-    margin-left: 150px;
+    margin-left: 149px;
     list-style: none;
 }
 
 .nav_header_title{
-    position: absolute;
-    width: 151.5px;
-    height: 37.47px;
-    left: 632px;
-    top: 117px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
+    display: block;
+    min-width: 200px;
     font-weight: 700;
     font-size: 25px;
     line-height: 30px;
-
+    text-decoration: none;
     color: #000000;
+}
+
+.nav_button{
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+    background-color: #000000;
+    border: none;
+    border-radius: 100%;
+}
+
+.container_page_header{
+    display: flex;
+    padding-top: 25px;
+    gap: 20px;
+    padding-left: 100px;
+}
+
+.header_list{
+    width: 600px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.text_header{
+    margin: 0;
+    padding: 0;
+    padding-top: 190px;
+    font-weight: 800;
+    font-size: 33px;
+    line-height: 40px;
+}
+
+.text_header_discount{
+    margin: 0;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+}
+
+.container_button_header{
+    display: block;
+    margin: 0;
+    padding: 15px;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 25px;
+    color:#fff;
+    background: rgba(229, 38, 38, 1);
+    border-radius: 50px;
+    border: none;
 }
